movietime/force-app/main/default/objects/Restaurant__c/fields/Are_we_coming_back__c.field-meta.xml
<CustomField>
    <fullName>Are_we_coming_back__c</fullName>
    <label>Are we coming back?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>