movietime/force-app/main/default/objects/Restaurant__c/fields/Number_of_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visits__c</fullName>
    <label>Number of Visits</label>
    <summaryForeignKey>Meal__c.Restaurant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>